# allfed-integrated-model

./: .flake8  .gitignore  .pre-commit-config.yaml  .zenodo.json  404.html  README.md  Reloc_Cold.xlsx  Supplemental_Data.xlsx  automate_mkdocs.py  dry caloric equivalent  environment.yml  index.html  index.md  intmodel.yml  mkdocs.yml  mkgendocs.yml  output.txt  output2.txt  plot_manuscript_figures.py  pyproject.toml  requirements.txt  run_scenarios_from_yaml.sh  search.html  setup.py  sitemap.xml  todo.txt
Figure_4/: overview.dot
data/: FeedInfo.csv  InputDataAndSources.csv  Integrated Model With No Food Trade.xlsx  NassCattle2022.csv  NassPigs2022.csv  PigsPerState.csv  Supplemental_Data.xlsx  added_10.npy  added_100.npy  added_1000.npy  all_fed_10.npy  all_fed_100.npy  all_fed_1000.npy  all_fed_10000.npy  comp_variables_10.npy  comp_variables_100.npy  comp_variables_1000.npy  default_slider_values.csv  mc_variables_10.npy  mc_variables_100.npy  mc_variables_1000.npy  mc_variables_10000.npy  mc_variables_10000_lower_lower_bound.npy  no_resilient_food_primary_analysis.npy  no_resilient_food_primary_results.npy  optimistic_slider_values.csv  removed_10.npy  removed_100.npy  removed_1000.npy  resilient_food_primary_analysis.npy  resilient_food_primary_results.npy  seaweed_growth_rate_country.csv
notebooks/: 1.0-example-run-cheri.ipynb  example_optimize.ipynb
reports/: 10k_details.txt  Quantitative_Assumptions.ods
scenarios/: README.md  USA_expanded.yaml  all_countries.yaml  argentina.yaml  baseline_USA.yaml  eu_countries.yaml  one_food_at_a_time_USA.yaml  (+2 more)
(+415 files in other folders)
