[tool.poetry]
name = "allfed-integrated-model"
version = "0.1.0"
description = "An integrated economic model for resilient foods"
authors = ["ALLFED"]

[tool.poetry.dependencies]
python = "^3.9"
PuLP = "^2.4"
jupyterlab = "^3.0.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
