[tool.poetry]
name = "allfed-integrated-model"
version = "0.1.0"
description = ""
authors = ["Morgan <morgan@allfed.info>"]

[tool.poetry.dependencies]
python = "^3.7"
PuLP = "^2.5.0"
matplotlib = "3.1.3"
ipykernel = "^6.2.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
